# ETC-Package

./: INSTALL  LICENSE  README.md  pyproject.toml
etc/: __init__.py  certified.py
etc/analysis/: __init__.py  calculus.py  ode.py  series.py
etc/core/: __init__.py  complex.py  integer.py  interval.py  real.py  sign.py
etc/geometry/: __init__.py  curves.py  polygon.py  surfaces.py
etc/problems/: __init__.py  base.py  canonical_problems.py  paradigm_shift.py  registry.py
etc/topology/: __init__.py  homotopy.py  invariants.py  manifold.py  path.py  space.py
etc/verify/: __init__.py  certificate.py  formal.py  lean_syntax.py  symbolic.py
scripts/: benchmark.py  run_comparison.py
tests/: test_core.py  test_problems.py
tests/portability/: colab.txt  docker.txt  run_colab.txt  run_docker.txt  run_windows.txt  windows.txt
